--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,51 @@ functions:
           path: reads3
           method: get
 
-          
+  get-authors:
+    handler: handler.getAuthors
+    events:
+      - http:
+          path: getauthors/{email}
+          method: get
+  
+  create-author:
+    handler: handler.createAuthor
+    events:
+      - http:
+          path: createauthor
+          method: post
+
+resources:  
+  Resources:
+    DynamoDbTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: packt-authors-table
+        AttributeDefinitions:
+          - AttributeName: email_address
+            AttributeType: S
+        KeySchema:
+          - AttributeName: email_address
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+    DynamoDBIamPolicy:
+      Type: AWS::IAM::Policy
+      DependsOn: DynamoDbTable
+      Properties:
+        PolicyName: lambda-dynamodb
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:GetItem
+                - dynamodb:PutItem
+                - dynamodb:Query
+                - dynamodb:Scan
+              Resource: arn:aws:dynamodb:*:*:table/packt-authors-table
+        Roles:
+          - Ref: IamRoleLambdaExecution
 
 
